# python-demo

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  test.json  test.py  test2.py
app/: __init__.py  main.py
app/api/routes/: health.py  uploads.py
app/core/: config.py
app/schemas/: uploads.py
app/services/: __init__.py  upload_client.py
docs/: troubleshooting.md
learning/: README.md  TASKS.md  algorithm-drills.md  concurrency-drills.md  daily-practice-plan.md  frontend-to-python-growth-plan.md  js-to-python-cheatsheet.md
learning/journal/: template.md
learning/steps/: 01-read-the-project.md  02-build-a-small-script.md  03-extract-a-service.md  04-add-tests.md  05-expose-a-web-api.md  06-feedback-and-iteration.md
python_demo_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: weather_summary.py
skills/python-upload-client/: SKILL.md
tests/: test_health_api.py  test_test2.py
